po: update po/sr_RS@latin/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-27 07:59+0000\n"
+"PO-Revision-Date: 2016-10-28 11:19+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
-msgstr ""
+msgstr "Polje \"%1\" je obavezno."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"body_html\" or \"body_text\" is required."
@@ -35,7 +35,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php CRM/Mailing/Form/Upload.php
 msgid "This message is missing a required token - {%1}: %2"
-msgstr ""
+msgstr "Nema obaveznih tokena u ovoj poruci - {%1}: %2"
 
 #: CRM/Mailing/BAO/Mailing.php CRM/Mailing/Selector/Event.php
 msgid "Opt-Out"
@@ -43,11 +43,11 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "You do not have permission to access this mailing report"
-msgstr ""
+msgstr "Nemate dozvolu za pristup ovom mejling izveštaju."
 
 #: CRM/Mailing/BAO/Mailing.php CRM/Mailing/BAO/MailingAB.php
 msgid "Selected mailing has been deleted."
-msgstr ""
+msgstr "Odabrani mejling je obrisan."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "SMS Message"
@@ -81,7 +81,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "View Mailing"
-msgstr ""
+msgstr "Pogledaj mejling"
 
 #: CRM/Mailing/BAO/MailingJob.php
 msgid "[CiviMail Draft]"
@@ -89,7 +89,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/MailingJob.php
 msgid "The mailing has been canceled."
-msgstr ""
+msgstr "Mejling je otkazan."
 
 #: CRM/Mailing/BAO/MailingJob.php
 msgid "Not scheduled"
@@ -122,12 +122,12 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: "
-msgstr ""
+msgstr "Mejling:"
 
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/Selector/Event.php
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Unsubscribe Requests"
-msgstr ""
+msgstr "Zahtevi za odjavu"
 
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/Selector/Event.php
 #: ang/crmMailing/services.js templates/CRM/Mailing/Page/Report.tpl
@@ -136,7 +136,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing Name(s)"
-msgstr ""
+msgstr "Ime(na) mejlinga"
 
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Status"
@@ -197,15 +197,15 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Domain"
-msgstr ""
+msgstr "Mejling domen"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Reply"
-msgstr ""
+msgstr "Mejling odgovor"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Unsubscribe"
-msgstr ""
+msgstr "Mejling odjava"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Resubscribe"
@@ -217,7 +217,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Type"
-msgstr ""
+msgstr "Tip mejlinga"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Name"
@@ -254,7 +254,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Completed"
-msgstr ""
+msgstr "Mejling kompletiran"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Message Template"
@@ -568,15 +568,15 @@ msgstr ""
 
 #: CRM/Mailing/Form/Component.php
 msgid "This message is having a invalid token - %1: %2"
-msgstr ""
+msgstr "Ova poruka ima nevažeći token - %1: %2"
 
 #: CRM/Mailing/Form/Component.php
 msgid "The following errors were detected in %1 message:"
-msgstr ""
+msgstr "Sledeće greške su pronađene u %1 poruci:"
 
 #: CRM/Mailing/Form/Component.php
 msgid "More information on tokens..."
-msgstr ""
+msgstr "Više informacija o tokenima.."
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Invalid form parameters."
@@ -584,15 +584,15 @@ msgstr ""
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Forward Mailing: %1"
-msgstr ""
+msgstr "Prosledi mejling: %1"
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Email %1"
-msgstr ""
+msgstr "Imejl %1"
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Forward"
-msgstr ""
+msgstr "Prosledi"
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Mailing is not forwarded to the given email address."
@@ -621,7 +621,7 @@ msgstr ""
 
 #: CRM/Mailing/Form/Group.php
 msgid "Remove duplicate emails?"
-msgstr ""
+msgstr "Ukloni duplikate imejlova?"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Unsubscription Group"
@@ -652,7 +652,7 @@ msgstr ""
 #: CRM/Mailing/Form/Settings.php CRM/Mailing/Form/Test.php
 #: CRM/Mailing/Form/Upload.php
 msgid "Mailing Saved"
-msgstr ""
+msgstr "Mejling sačuvan"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Cannot have same mail in Include mailing(s) and Exclude mailing(s)."
@@ -681,7 +681,7 @@ msgstr ""
 #: CRM/Mailing/Form/Optout.php CRM/Mailing/Form/Unsubscribe.php
 #: CRM/Mailing/Page/Common.php
 msgid "There was an error in your request"
-msgstr ""
+msgstr "Postoji greška u vašem zahtevu"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Please Confirm Your Opt Out"
@@ -707,7 +707,7 @@ msgstr ""
 
 #: CRM/Mailing/Form/Schedule.php
 msgid "Schedule Mailing"
-msgstr ""
+msgstr "Zakaži mejling"
 
 #: CRM/Mailing/Form/Schedule.php ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -716,7 +716,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Submit Mailing"
-msgstr ""
+msgstr "Pošalji mejling"
 
 #: CRM/Mailing/Form/Schedule.php
 msgid ""
@@ -727,7 +727,7 @@ msgstr ""
 
 #: CRM/Mailing/Form/Search.php CRM/Mailing/Selector/Browse.php
 msgid "SMS Name"
-msgstr ""
+msgstr "SMS ime"
 
 #: CRM/Mailing/Form/Search.php
 msgid "Created or Sent by"
@@ -807,7 +807,7 @@ msgstr ""
 
 #: CRM/Mailing/Form/Test.php
 msgid "Test not sent."
-msgstr ""
+msgstr "Test nije poslat."
 
 #: CRM/Mailing/Form/Test.php
 msgid ""
@@ -825,11 +825,11 @@ msgstr ""
 
 #: CRM/Mailing/Form/Test.php
 msgid "Test message sent"
-msgstr ""
+msgstr "Test-poruka poslata"
 
 #: CRM/Mailing/Form/Unsubscribe.php
 msgid "Missing Parameters"
-msgstr ""
+msgstr "Nedostaju parametri"
 
 #: CRM/Mailing/Form/Unsubscribe.php
 msgid ""
@@ -881,15 +881,15 @@ msgstr ""
 
 #: CRM/Mailing/Form/Upload.php
 msgid "More information on required tokens..."
-msgstr ""
+msgstr "Više informacija o obaveznim tokenima..."
 
 #: CRM/Mailing/Form/Upload.php
 msgid "Mailing Content"
-msgstr ""
+msgstr "Sadržaj mejlinga"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail"
-msgstr ""
+msgstr "Pristup CiviMail-u"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail subscribe/unsubscribe pages"
@@ -901,12 +901,12 @@ msgstr ""
 
 #: CRM/Mailing/Info.php
 msgid "delete in CiviMail"
-msgstr ""
+msgstr "obriši u CiviMail"
 
 #: CRM/Mailing/Info.php CRM/Mailing/Page/Browse.php
 #: CRM/Mailing/Selector/Browse.php
 msgid "Delete Mailing"
-msgstr ""
+msgstr "Obriši mejling"
 
 #: CRM/Mailing/Info.php
 msgid "view public CiviMail content"
@@ -914,31 +914,31 @@ msgstr ""
 
 #: CRM/Mailing/Info.php
 msgid "create mailings"
-msgstr ""
+msgstr "kreiraj mejling"
 
 #: CRM/Mailing/Info.php
 msgid "schedule mailings"
-msgstr ""
+msgstr "zakaži mejling"
 
 #: CRM/Mailing/Info.php
 msgid "approve mailings"
-msgstr ""
+msgstr "odobri mejling"
 
 #: CRM/Mailing/Page/Browse.php CRM/Mailing/Selector/Browse.php
 msgid "Cancel Mailing"
-msgstr ""
+msgstr "Otkaži mejling"
 
 #: CRM/Mailing/Page/Browse.php CRM/Mailing/Selector/Browse.php
 msgid "Archive Mailing"
-msgstr ""
+msgstr "Arhiviraj mejling"
 
 #: CRM/Mailing/Page/Browse.php
 msgid "Find Mass SMS"
-msgstr ""
+msgstr "Pretraga Masovnih SMS-ova"
 
 #: CRM/Mailing/Page/Browse.php
 msgid "Search Mailings"
-msgstr ""
+msgstr "Pretraži mejling"
 
 #: CRM/Mailing/Page/Component.php templates/CRM/Mailing/Form/Component.tpl
 msgid "Edit Mailing Component"
@@ -954,31 +954,31 @@ msgstr ""
 
 #: CRM/Mailing/Page/Event.php CRM/Mailing/Page/Report.php
 msgid "Back to Activities"
-msgstr ""
+msgstr "Nazad na aktivnosti"
 
 #: CRM/Mailing/Page/Event.php CRM/Mailing/Page/Report.php
 msgid "Back to Mailing"
-msgstr ""
+msgstr "Nazad u mejling"
 
 #: CRM/Mailing/Page/Event.php
 msgid "Back to Report"
-msgstr ""
+msgstr "q"
 
 #: CRM/Mailing/Page/Report.php
 msgid "Back to Activity"
-msgstr ""
+msgstr "Nazad na aktivnost"
 
 #: CRM/Mailing/Page/Report.php
 msgid "Back to CiviMail"
-msgstr ""
+msgstr "Nazad u CiviMail"
 
 #: CRM/Mailing/Page/Report.php
 msgid "CiviMail Report: %1"
-msgstr ""
+msgstr "CiviMail izveštaj: %1"
 
 #: CRM/Mailing/Page/Tab.php
 msgid "Mailings sent to %1"
-msgstr ""
+msgstr "Mejling poslat %1"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Draft"
@@ -986,7 +986,7 @@ msgstr ""
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Testing"
-msgstr ""
+msgstr "Testiranje"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/EditCtrl/report.html
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/services.js
@@ -1039,7 +1039,7 @@ msgstr ""
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Unopened/Hidden "
-msgstr ""
+msgstr "Neotvoreno/skriveno"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Clicked "
@@ -1067,15 +1067,15 @@ msgstr ""
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Are you sure you want to cancel this mailing?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da otkažete ovaj mejling?"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Are you sure you want to delete this mailing?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete ovaj mejling?"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Are you sure you want to archive this mailing?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da arhivirate ovaj mejling?"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Approve/Reject"
@@ -1091,11 +1091,11 @@ msgstr ""
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Continue Mailing"
-msgstr ""
+msgstr "Nastavi mejling"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Archive"
-msgstr ""
+msgstr "Arhiva"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "CiviMail Mailings"
@@ -1107,12 +1107,12 @@ msgstr ""
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Forwarded Email"
-msgstr ""
+msgstr "Prosleđeni imejl"
 
 #: CRM/Mailing/Selector/Event.php ang/crmMailing/services.js
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Successful Deliveries"
-msgstr ""
+msgstr "Uspešne dostave"
 
 #: CRM/Mailing/Selector/Event.php ang/crmMailing/services.js
 #: templates/CRM/Mailing/Page/Report.tpl
@@ -1164,7 +1164,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
-msgstr ""
+msgstr "Imejl adresa"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
@@ -1188,27 +1188,27 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
-msgstr ""
+msgstr "Test imejl"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
-msgstr ""
+msgstr "Pošalji test poruku na %1"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test"
-msgstr ""
+msgstr "Pošalji test"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr ""
+msgstr "Pošalji test imejl grupi:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
-msgstr ""
+msgstr "Pošalji test poruku grupi"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
-msgstr ""
+msgstr "Poslato na %1"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "A test message will be sent to %1 people:"
@@ -1220,7 +1220,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Group is empty."
-msgstr ""
+msgstr "Grupa je prazna."
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Preview a List of Recipients"
@@ -1245,11 +1245,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Include:"
-msgstr ""
+msgstr "Uključi:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Exclude:"
-msgstr ""
+msgstr "Isključi:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1267,16 +1267,16 @@ msgstr ""
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Opens"
-msgstr ""
+msgstr "Otvaranja"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 #: templates/CRM/Mailing/Form/Settings.tpl
 msgid "Responding"
-msgstr ""
+msgstr "Odgovora"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Auto-Respond"
-msgstr ""
+msgstr "Auto-odgovora"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 #: templates/CRM/Mailing/Page/Resubscribe.tpl
@@ -1294,15 +1294,15 @@ msgstr ""
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send immediately"
-msgstr ""
+msgstr "Pošalji odmah"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send at:"
-msgstr ""
+msgstr "Pošalji u:"
 
 #: ang/crmMailing/BlockSummary.html ang/crmMailingAB/BlockSetup.html
 msgid "Select Campaign"
-msgstr ""
+msgstr "Odaberi kampanju"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click Throughs"
@@ -1394,7 +1394,7 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "(Estimating)"
-msgstr ""
+msgstr "(Procena)"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/PreviewRecipCtrl.html
 msgid "No recipients"
@@ -1462,7 +1462,7 @@ msgstr ""
 
 #: ang/crmMailing/EmailBodyCtrl.js
 msgid "Required tokens"
-msgstr ""
+msgstr "Obavezni tokeni"
 
 #: ang/crmMailing/MsgTemplateCtrl.js
 msgid "Save Template"
@@ -1498,11 +1498,11 @@ msgstr ""
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Group"
-msgstr ""
+msgstr "Uključi grupu"
 
 #: ang/crmMailing/Recipients.html
 msgid "Exclude Group"
-msgstr ""
+msgstr "Isključi grupu"
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Past Recipients From"
@@ -1524,7 +1524,7 @@ msgstr ""
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Update \"%1\""
-msgstr ""
+msgstr "Ažuriraj \"%1\""
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save as:"
@@ -1540,7 +1540,7 @@ msgstr ""
 
 #: ang/crmMailing/services.js
 msgid "Sending..."
-msgstr ""
+msgstr "Slanje..."
 
 #: ang/crmMailing/services.js
 msgid "Unsubscribes"
@@ -1564,11 +1564,11 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (A)"
-msgstr ""
+msgstr "Od (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (B)"
-msgstr ""
+msgstr "Od (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Reply-To (A)"
@@ -1603,15 +1603,15 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send"
-msgstr ""
+msgstr "Pošalji"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send A/B test immediately"
-msgstr ""
+msgstr "Pošalji A/B test odmah"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send A/B test at:"
-msgstr ""
+msgstr "Pošalji A/B test u:"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess"
@@ -1627,7 +1627,7 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Setup"
-msgstr ""
+msgstr "Podešavanje"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Target"
@@ -1678,19 +1678,19 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Started at"
-msgstr ""
+msgstr "Započeto"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Not started"
-msgstr ""
+msgstr "Nije započeto"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Completed at"
-msgstr ""
+msgstr "Završeno"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Not completed"
-msgstr ""
+msgstr "Nije završeno"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Search for contacts using '%1'"
@@ -1706,7 +1706,7 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for  '%1'"
-msgstr ""
+msgstr "Izveštaji za '%1'"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Opens (WIP)"
@@ -1718,11 +1718,11 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test A (%1)"
-msgstr ""
+msgstr "Test A (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test B (%1)"
-msgstr ""
+msgstr "Test B (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Final (%1)"
@@ -1734,11 +1734,11 @@ msgstr ""
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Status -"
-msgstr ""
+msgstr "- Status -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Test Type -"
-msgstr ""
+msgstr "- Tip testa -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "You have no A/B mailings"
@@ -1746,27 +1746,27 @@ msgstr ""
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "New A/B Test"
-msgstr ""
+msgstr "Novi A/B test"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing A"
-msgstr ""
+msgstr "Mejling A"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing B"
-msgstr ""
+msgstr "Mejling B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing A"
-msgstr ""
+msgstr "Test mejling A"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing B"
-msgstr ""
+msgstr "Test mejling B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Final Mailing"
-msgstr ""
+msgstr "Konačni mejling"
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid ""
@@ -1794,7 +1794,7 @@ msgstr ""
 #: templates/CRM/Mailing/Form/Approve.tpl
 #: templates/CRM/Mailing/Form/Schedule.tpl templates/CRM/Mailing/Form/Test.tpl
 msgid "Attachment(s):"
-msgstr ""
+msgstr "Prilog(prilozi):"
 
 #: templates/CRM/Mailing/Form/Approve.tpl
 #: templates/CRM/Mailing/Form/Schedule.tpl
@@ -1972,11 +1972,11 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Include Mailings"
-msgstr ""
+msgstr "Uključi mejlinge"
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Exclude Mailings"
-msgstr ""
+msgstr "Isključi mejlinge"
 
 #: templates/CRM/Mailing/Form/Group.tpl
 msgid "Additional Mailing Recipients"
@@ -2038,20 +2038,20 @@ msgstr ""
 #: templates/CRM/Mailing/Form/Schedule.tpl
 msgid ""
 "Set a date and time when you want CiviMail to start sending this mailing."
-msgstr ""
+msgstr "Odaberite datum i vreme kada želite da CiviMail počne sa slanjem ovog mejlinga."
 
 #: templates/CRM/Mailing/Form/Search/Common.tpl
 #: templates/CRM/Mailing/Form/Search.tpl
 msgid "Mailing Date"
-msgstr ""
+msgstr "Datum mejlinga"
 
 #: templates/CRM/Mailing/Form/Search.tpl
 msgid "SMS Date"
-msgstr ""
+msgstr "Datum SMS-a"
 
 #: templates/CRM/Mailing/Form/Search.tpl
 msgid "SMS Status"
-msgstr ""
+msgstr "Status SMS-a"
 
 #: templates/CRM/Mailing/Form/Settings.hlp
 msgid ""
@@ -2158,7 +2158,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Subscribe.tpl
 msgid "Group Listings."
-msgstr ""
+msgstr "Listing grupa"
 
 #: templates/CRM/Mailing/Form/Task.tpl
 msgid "Number of selected Mailing Recipients: %1"
@@ -2166,7 +2166,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Test.hlp
 msgid "Test Message"
-msgstr ""
+msgstr "Test poruka"
 
 #: templates/CRM/Mailing/Form/Test.hlp
 msgid ""
@@ -2215,19 +2215,19 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Test.tpl
 msgid "Text Version:"
-msgstr ""
+msgstr "Tekstualna verzija:"
 
 #: templates/CRM/Mailing/Form/Test.tpl
 msgid "Text Version"
-msgstr ""
+msgstr "Tekstualna verzija"
 
 #: templates/CRM/Mailing/Form/Test.tpl
 msgid "HTML Version:"
-msgstr ""
+msgstr "HTML verzija:"
 
 #: templates/CRM/Mailing/Form/Test.tpl
 msgid "HTML Version"
-msgstr ""
+msgstr "HTML verzija"
 
 #: templates/CRM/Mailing/Form/Unsubscribe.tpl
 msgid ""
@@ -2254,7 +2254,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Upload.tpl
 msgid "Auto-Generated"
-msgstr ""
+msgstr "Auto-generisano"
 
 #: templates/CRM/Mailing/Form/Upload.tpl
 msgid ""
