--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-27 14:53+0000\n"
+"PO-Revision-Date: 2016-10-28 08:33+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -230,7 +230,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Add Products to This Page"
-msgstr ""
+msgstr "Dodaj proizvod na ovu stranicu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
