--- a/po/sr_RS@latin/extension.po
+++ b/po/sr_RS@latin/extension.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-28 10:55+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +19,7 @@ msgstr ""
 
 #: CRM/Extension/Browser.php CRM/Extension/Downloader.php
 msgid "Directory Unwritable"
-msgstr ""
+msgstr "Nemoguće upisati u direktorijum"
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -36,7 +37,7 @@ msgstr ""
 
 #: CRM/Extension/Browser.php
 msgid "Connection Error"
-msgstr ""
+msgstr "Greška u povezivanju"
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -93,14 +94,14 @@ msgstr ""
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
-msgstr ""
+msgstr "ZIP podrška obavezna"
 
 #: CRM/Extension/Downloader.php
 msgid ""
 "You will not be able to install extensions at this time because your "
 "installation of PHP does not support ZIP archives. Please ask your system "
 "administrator to install the standard PHP-ZIP extension."
-msgstr ""
+msgstr "Nećete moći da instalirate ekstenzije zato što vaša instalacija PHP-a nema podršku za ZIP arhive. Zamolite vašeg administratora da instalira standardnu PHP-ZIP ekstenziju."
 
 #: CRM/Extension/Downloader.php
 msgid ""
@@ -119,7 +120,7 @@ msgstr ""
 
 #: CRM/Extension/Downloader.php
 msgid "Installation Error"
-msgstr ""
+msgstr "Greška pri instalaciji"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension to %1."
@@ -131,7 +132,7 @@ msgstr ""
 
 #: CRM/Extension/Downloader.php
 msgid "Failed reading data from %1 during installation"
-msgstr ""
+msgstr "Neuspelo čitanje podataka sa %1 tokom instalacije"
 
 #: CRM/Extension/Manager/Payment.php
 msgid "Failed to load file (%3) for payment processor (%1) while running \"%2\""
@@ -151,11 +152,11 @@ msgstr ""
 msgid ""
 "A copy of the extension (%1) is in a system folder (%2). The system copy "
 "will be preserved, but the new copy will be used."
-msgstr ""
+msgstr "Kopija ekstenzije (%1) je u sistemskom direktorijumu (%2). Kopija u sistemu će biti sačuvana, ali koristiće se nova kopija."
 
 #: CRM/Extension/Manager.php
 msgid "Selected option value has been deleted."
-msgstr ""
+msgstr "Odabrana vrednost opcije je obrisana"
 
 #: CRM/Extension/Browser.php
 msgid ""
