--- a/po/ro_RO/countries.po
+++ b/po/ro_RO/countries.po
@@ -5,6 +5,7 @@
 # Translators:
 # adna23 <adina_sis@yahoo.com>, 2016
 # pitzy2014 <adp2005rocks@gmail.com>, 2014
+# Cristian Dinca <cristiandinca33@gmail.com>, 2016
 # Dragos Apostol <dragos18dragon@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tiberiu manolache <tiberiu.manolache@gmail.com>, 2016
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-30 15:13+0000\n"
+"Last-Translator: Cristian Dinca <cristiandinca33@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -135,7 +136,7 @@ msgstr "Benin"
 
 msgctxt "country"
 msgid "Bermuda"
-msgstr ""
+msgstr "Bermude"
 
 msgctxt "country"
 msgid "Bhutan"
@@ -155,7 +156,7 @@ msgstr "Botsuana"
 
 msgctxt "country"
 msgid "Bouvet Island"
-msgstr ""
+msgstr "Insulele Bouvet"
 
 msgctxt "country"
 msgid "Brazil"
@@ -163,11 +164,11 @@ msgstr "Brazilia"
 
 msgctxt "country"
 msgid "British Indian Ocean Territory"
-msgstr ""
+msgstr "Teritoriile Britanice din Oceanul Indian"
 
 msgctxt "country"
 msgid "Virgin Islands, British"
-msgstr ""
+msgstr "Insulele Virgine Britanice"
 
 msgctxt "country"
 msgid "Brunei Darussalam"
@@ -227,11 +228,11 @@ msgstr "China"
 
 msgctxt "country"
 msgid "Christmas Island"
-msgstr ""
+msgstr "Insulele Christmas"
 
 msgctxt "country"
 msgid "Cocos (Keeling) Islands"
-msgstr ""
+msgstr "Insulele Cocos (Keeling)"
 
 msgctxt "country"
 msgid "Colombia"
@@ -247,11 +248,11 @@ msgstr "Republica Democrată Congo"
 
 msgctxt "country"
 msgid "Congo, Republic of the"
-msgstr ""
+msgstr "Republica Congo"
 
 msgctxt "country"
 msgid "Cook Islands"
-msgstr ""
+msgstr "Insulele Cook"
 
 msgctxt "country"
 msgid "Costa Rica"
@@ -327,7 +328,7 @@ msgstr "Etiopia"
 
 msgctxt "country"
 msgid "Falkland Islands (Malvinas)"
-msgstr ""
+msgstr "Insulele Falkland (Malvine)"
 
 msgctxt "country"
 msgid "Faroe Islands"
@@ -351,11 +352,11 @@ msgstr "Guyana Franceză"
 
 msgctxt "country"
 msgid "French Polynesia"
-msgstr ""
+msgstr "Polinezia Franceza"
 
 msgctxt "country"
 msgid "French Southern Territories"
-msgstr ""
+msgstr "Teritoriile Franceze de Sud"
 
 msgctxt "country"
 msgid "Gabon"
@@ -383,7 +384,7 @@ msgstr "Grecia"
 
 msgctxt "country"
 msgid "Greenland"
-msgstr "Greenland"
+msgstr "Groenlanda"
 
 msgctxt "country"
 msgid "Grenada"
@@ -391,11 +392,11 @@ msgstr "Grenada"
 
 msgctxt "country"
 msgid "Guadeloupe"
-msgstr ""
+msgstr "Guadelupe"
 
 msgctxt "country"
 msgid "Guam"
-msgstr ""
+msgstr "Guam"
 
 msgctxt "country"
 msgid "Guatemala"
@@ -419,7 +420,7 @@ msgstr "Haiti"
 
 msgctxt "country"
 msgid "Heard Island and McDonald Islands"
-msgstr ""
+msgstr "Insulele Heard si McDonald"
 
 msgctxt "country"
 msgid "Holy See (Vatican City State)"
@@ -595,7 +596,7 @@ msgstr "Mauritius"
 
 msgctxt "country"
 msgid "Mayotte"
-msgstr ""
+msgstr "Mayotte"
 
 msgctxt "country"
 msgid "Mexico"
@@ -667,15 +668,15 @@ msgstr "Nigeria"
 
 msgctxt "country"
 msgid "Niue"
-msgstr ""
+msgstr "Niue"
 
 msgctxt "country"
 msgid "Norfolk Island"
-msgstr ""
+msgstr "Insula Norfolk"
 
 msgctxt "country"
 msgid "Northern Mariana Islands"
-msgstr ""
+msgstr "Insulele Mariane de Nord"
 
 msgctxt "country"
 msgid "Norway"
@@ -719,7 +720,7 @@ msgstr "Filipine"
 
 msgctxt "country"
 msgid "Pitcairn"
-msgstr ""
+msgstr "Insula Pitcairn"
 
 msgctxt "country"
 msgid "Poland"
@@ -751,7 +752,7 @@ msgstr "Ruanda"
 
 msgctxt "country"
 msgid "Reunion"
-msgstr ""
+msgstr "Reunion"
 
 msgctxt "country"
 msgid "Saint Helena"
@@ -767,7 +768,7 @@ msgstr "Sfânta Lucia"
 
 msgctxt "country"
 msgid "Saint Pierre and Miquelon"
-msgstr ""
+msgstr "Sfantul Pierre si Miquelon"
 
 msgctxt "country"
 msgid "Saint Vincent and the Grenadines"
@@ -823,7 +824,7 @@ msgstr "Africa de Sud"
 
 msgctxt "country"
 msgid "South Georgia and the South Sandwich Islands"
-msgstr ""
+msgstr "Insulele Georgia si Sandwich de Sud"
 
 msgctxt "country"
 msgid "Spain"
@@ -843,7 +844,7 @@ msgstr "Suriname"
 
 msgctxt "country"
 msgid "Svalbard and Jan Mayen"
-msgstr ""
+msgstr "Svalbard si Jan Mayen"
 
 msgctxt "country"
 msgid "Swaziland"
@@ -895,7 +896,7 @@ msgstr "Togo"
 
 msgctxt "country"
 msgid "Tokelau"
-msgstr ""
+msgstr "Tokelau"
 
 msgctxt "country"
 msgid "Tonga"
@@ -919,7 +920,7 @@ msgstr "Turkmenistan"
 
 msgctxt "country"
 msgid "Turks and Caicos Islands"
-msgstr ""
+msgstr "Insulele Turks si Caicos"
 
 msgctxt "country"
 msgid "Tuvalu"
@@ -943,7 +944,7 @@ msgstr "Marea Britanie"
 
 msgctxt "country"
 msgid "United States Minor Outlying Islands"
-msgstr ""
+msgstr "Insulele Minore Îndepărtate ale Statelor Unite"
 
 msgctxt "country"
 msgid "United States"
@@ -971,11 +972,11 @@ msgstr "Vietnam"
 
 msgctxt "country"
 msgid "Virgin Islands, U.S."
-msgstr ""
+msgstr "Insulele Virgine U.S."
 
 msgctxt "country"
 msgid "Wallis and Futuna"
-msgstr ""
+msgstr "Wallis si Futuna"
 
 msgctxt "country"
 msgid "Western Sahara"
@@ -1011,60 +1012,60 @@ msgstr "Muntenegru"
 
 msgctxt "country"
 msgid "Jersey"
-msgstr ""
+msgstr "Jersey"
 
 msgctxt "country"
 msgid "Guernsey"
-msgstr ""
+msgstr "Guernsey"
 
 msgctxt "country"
 msgid "Isle of Man"
-msgstr ""
+msgstr "Insula Man"
 
 msgctxt "country"
 msgid "South Sudan"
-msgstr ""
+msgstr "Sudanul de Sud"
 
 msgctxt "country"
 msgid "Curaçao"
-msgstr ""
+msgstr "Curaçao"
 
 msgctxt "country"
 msgid "Sint Maarten (Dutch Part)"
-msgstr ""
+msgstr "Sint Maarten (Olandez)"
 
 msgctxt "country"
 msgid "Bonaire, Saint Eustatius and Saba"
-msgstr ""
+msgstr "Bonaire, Saint Eustatius si Saba"
 
 msgctxt "country"
 msgid "Kosovo"
-msgstr ""
+msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Sfantul Bartolomeu"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Saint Martin (Francez)"
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "Insulele Virgine Britanice"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "Coasta de Fildes"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "Republica Islamica Iran"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "Republica Macedonia"
 
 msgctxt "country"
 msgid "Palestinian Territory"
-msgstr ""
+msgstr "Teritoriul Palestinian"
