--- a/po/sr_RS@latin/case.po
+++ b/po/sr_RS@latin/case.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-31 14:30+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +21,7 @@ msgstr ""
 #: xml/templates/message_templates/case_activity_html.tpl
 #: xml/templates/message_templates/case_activity_text.tpl
 msgid "View activity"
-msgstr ""
+msgstr "Pogledaj aktivnost"
 
 #: CRM/Case/BAO/Case.php
 msgid "no subject"
@@ -114,23 +115,23 @@ msgstr ""
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Type %1 %2"
-msgstr ""
+msgstr "Tip aktivnosti %1 %2"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Duration %1 %2"
-msgstr ""
+msgstr "Trajanje aktivnosti %1 %2"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Medium %1 %2"
-msgstr ""
+msgstr "Medij aktivnosti %1 %2"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Details %1 '%2'"
-msgstr ""
+msgstr "Detalji o aktivnosti %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Auto Genrated %1 '%2'"
-msgstr ""
+msgstr "Aktivnost je automatski generisana %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Role in Case  %1 '%2'"
@@ -258,7 +259,7 @@ msgstr ""
 
 #: CRM/Case/Form/Activity.php
 msgid "Do you want to <a %1>edit the existing activity</a>?"
-msgstr ""
+msgstr "Da li želite da <a %1>uredite postojeću aktivnost</a>?"
 
 #: CRM/Case/Form/Activity.php CRM/Case/XMLProcessor/Report.php
 msgid "Reported By"
@@ -266,7 +267,7 @@ msgstr ""
 
 #: CRM/Case/Form/Activity.php CRM/Case/XMLProcessor/Report.php
 msgid "Medium"
-msgstr ""
+msgstr "Medij"
 
 #: CRM/Case/Form/Activity.php
 msgid ""
@@ -277,23 +278,23 @@ msgstr ""
 
 #: CRM/Case/Form/Activity.php
 msgid "Selected Activity cannot be deleted."
-msgstr ""
+msgstr "Odabrana aktivnost ne može biti obrisana."
 
 #: CRM/Case/Form/Activity.php
 msgid "The selected activity has been restored.<br />"
-msgstr ""
+msgstr "Odabrana aktivnost je ponovo uspostavljena.<br />"
 
 #: CRM/Case/Form/Activity.php
 msgid "A copy of the activity has also been sent to selected contacts(s)."
-msgstr ""
+msgstr "Kopija aktivnosti je poslata odabranom kontaktu(kontaktima)."
 
 #: CRM/Case/Form/Activity.php
 msgid "%1 Saved"
-msgstr ""
+msgstr "%1 sačuvano"
 
 #: CRM/Case/Form/ActivityToCase.php CRM/Case/XMLProcessor/Report.php
 msgid "With Contact(s)"
-msgstr ""
+msgstr "Sa kontaktom(kontaktima)"
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
@@ -301,7 +302,7 @@ msgstr ""
 
 #: CRM/Case/Form/Case.php
 msgid "You do not have any active %1"
-msgstr ""
+msgstr "Nemate aktvinih %1"
 
 #: CRM/Case/Form/Case.php
 msgid ""
@@ -312,11 +313,11 @@ msgstr ""
 
 #: CRM/Case/Form/Case.php
 msgid "Client contact does not exist: %1"
-msgstr ""
+msgstr "Kontakt klijenta ne postoji: %1"
 
 #: CRM/Case/Form/Case.php
 msgid "Select Tags"
-msgstr ""
+msgstr "Izaberi tagove"
 
 #: CRM/Case/Form/Case.php
 msgid ""
@@ -346,7 +347,7 @@ msgstr[2] ""
 
 #: CRM/Case/Form/CaseView.php
 msgid "Add Activity"
-msgstr ""
+msgstr "Dodaj aktivnost"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Activity Audit"
@@ -362,7 +363,7 @@ msgstr ""
 
 #: CRM/Case/Form/CaseView.php
 msgid "- select type -"
-msgstr ""
+msgstr "- izaberi tip -"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Activities from the %1 activity set have been added to this case."
@@ -382,15 +383,15 @@ msgstr ""
 
 #: CRM/Case/Form/CaseView.php
 msgid "Activity Dates - From"
-msgstr ""
+msgstr "Datumi aktivnosti - od"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Deleted Activities"
-msgstr ""
+msgstr "Obrisane aktivnosti"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Select Contact"
-msgstr ""
+msgstr "Odaberi kontakt"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Reassign Case"
@@ -398,15 +399,15 @@ msgstr ""
 
 #: CRM/Case/Form/EditClient.php
 msgid "Please select a different contact."
-msgstr ""
+msgstr "Izaberite drugi kontakt"
 
 #: CRM/Case/Form/Report.php
 msgid "All Activities"
-msgstr ""
+msgstr "Sve aktivnosti"
 
 #: CRM/Case/Form/Report.php
 msgid "Exclude Completed Activities"
-msgstr ""
+msgstr "Isključi kompletirane aktivnsoti"
 
 #: CRM/Case/Form/Report.php
 msgid "Redact (hide) Client and Service Provider Data"
@@ -414,11 +415,11 @@ msgstr ""
 
 #: CRM/Case/Form/Report.php
 msgid "Generate Report"
-msgstr ""
+msgstr "Generiši izveštaj"
 
 #: CRM/Case/Form/Search.php
 msgid "Client Name or Email"
-msgstr ""
+msgstr "Ime klijenta ili imejl adresa"
 
 #: CRM/Case/Form/Search.php templates/CRM/Case/Page/DashBoard.tpl
 msgid "Find Cases"
@@ -470,11 +471,11 @@ msgstr ""
 
 #: CRM/Case/Info.php
 msgid "delete in CiviCase"
-msgstr ""
+msgstr "obriši u CiviCase"
 
 #: CRM/Case/Info.php
 msgid "administer CiviCase"
-msgstr ""
+msgstr "administriraj CiviCase"
 
 #: CRM/Case/Info.php
 msgid "access my cases and activities"
@@ -496,11 +497,11 @@ msgstr ""
 
 #: CRM/Case/Page/AJAX.php
 msgid "closed"
-msgstr ""
+msgstr "zatvoren"
 
 #: CRM/Case/Page/DashBoard.php
 msgid "CiviCase Dashboard"
-msgstr ""
+msgstr "CiviCase kontrolna tabla"
 
 #: CRM/Case/Page/DashBoard.php
 msgid "You are not authorized to access all cases and activities."
@@ -517,7 +518,7 @@ msgstr ""
 
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Form/CaseView.tpl
 msgid "Assign to Another Client"
-msgstr ""
+msgstr "Dodeli drugom klijentu"
 
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Form/Task/Print.tpl
 #: templates/CRM/Case/Page/DashboardSelector.tpl
@@ -631,15 +632,15 @@ msgstr ""
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
-msgstr ""
+msgstr "Saznaj više..."
 
 #: ang/crmCaseType/edit.html templates/CRM/Case/Form/CaseView.tpl
 msgid "Roles"
-msgstr ""
+msgstr "Uloge"
 
 #: ang/crmCaseType/edit.html
 msgid "Add..."
-msgstr ""
+msgstr "Dodaj..."
 
 #: ang/crmCaseType/edit.html
 msgid "Timeline"
@@ -660,11 +661,11 @@ msgstr ""
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Is Manager"
-msgstr ""
+msgstr "je menadžer"
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Add role"
-msgstr ""
+msgstr "Dodaj ulogu"
 
 #: ang/crmCaseType/timelineTable.html
 msgid "Reference"
@@ -677,7 +678,7 @@ msgstr ""
 
 #: templates/CRM/Case/Audit/Audit.tpl
 msgid "Incomplete"
-msgstr ""
+msgstr "Nekompletno"
 
 #: templates/CRM/Case/Audit/Report.tpl
 msgid "Case Summary"
@@ -694,7 +695,7 @@ msgstr ""
 
 #: templates/CRM/Case/Audit/Report.tpl
 msgid "(not assigned)"
-msgstr ""
+msgstr "(nedodeljen)"
 
 #: templates/CRM/Case/Audit/Report.tpl templates/CRM/Case/Form/CaseView.tpl
 msgid "Client Relationship"
@@ -722,7 +723,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/Activity.tpl
 msgid "With other contact(s)"
-msgstr ""
+msgstr "Sa drugim kontaktom(kontaktima)"
 
 #: templates/CRM/Case/Form/Activity.tpl
 msgid "With client"
@@ -734,7 +735,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/Activity.tpl
 msgid "Send a Copy"
-msgstr ""
+msgstr "Pošalji kopiju"
 
 #: templates/CRM/Case/Form/Activity.tpl
 msgid ""
@@ -777,7 +778,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "Created On"
-msgstr ""
+msgstr "Kreirano"
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "View this revision of the activity record."
@@ -899,11 +900,11 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Assign To"
-msgstr ""
+msgstr "Dodeli"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Change To"
-msgstr ""
+msgstr "Promeni u"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Are you sure you want to delete this case role?"
@@ -923,11 +924,11 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "- select contacts -"
-msgstr ""
+msgstr "- odaberi kontakte -"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "The group %1 has no members."
-msgstr ""
+msgstr "Grupa %1 nema članove"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Case Tags"
@@ -939,7 +940,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Add Tags"
-msgstr ""
+msgstr "Dodaj tagove"
 
 #: templates/CRM/Case/Form/EditClient.tpl
 msgid "This is case is currently assigned to %1."
@@ -959,11 +960,11 @@ msgstr ""
 
 #: templates/CRM/Case/Form/Selector.tpl
 msgid "Show recent activities"
-msgstr ""
+msgstr "Prikaži skorašnje aktivnosti"
 
 #: templates/CRM/Case/Form/Selector.tpl
 msgid "Hide activities"
-msgstr ""
+msgstr "Sakrij aktivnosti"
 
 #: templates/CRM/Case/Form/Selector.tpl
 #: templates/CRM/Case/Page/DashboardSelector.tpl
@@ -1058,13 +1059,13 @@ msgstr ""
 
 #: templates/CRM/Case/Page/DashboardSelector.tpl
 msgid "Manager"
-msgstr ""
+msgstr "Menadžer"
 
 #: templates/CRM/Case/Page/DashboardSelector.tpl
 #: xml/templates/message_templates/case_activity_html.tpl
 #: xml/templates/message_templates/case_activity_text.tpl
 msgid "Edit activity"
-msgstr ""
+msgstr "Uredi aktivnost"
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "Oops, It looks like there are no active case types."
@@ -1138,7 +1139,7 @@ msgstr ""
 
 #: CRM/Case/Task.php
 msgid "Print/merge Document"
-msgstr ""
+msgstr "Štampa/spajanje dokumenta"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Homeless Services Coordinator is"
@@ -1182,7 +1183,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Export Document"
-msgstr ""
+msgstr "Eksport dokumenta"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Are you sure you want to end this relationship?"
