--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-28 09:42+0000\n"
+"PO-Revision-Date: 2016-10-31 11:43+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -895,17 +895,17 @@ msgstr ""
 #: CRM/Contribute/Form/ContributionPage/Custom.php
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Include Profile"
-msgstr ""
+msgstr "Uključi profil"
 
 #: CRM/Contribute/Form/ContributionPage/Custom.php
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "(top of page)"
-msgstr ""
+msgstr "(vrh stranice)"
 
 #: CRM/Contribute/Form/ContributionPage/Custom.php
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "(bottom of page)"
-msgstr ""
+msgstr "(dno stranice)"
 
 #: CRM/Contribute/Form/ContributionPage/Premium.php
 #: CRM/Contribute/Form/ContributionPage/Settings.php CRM/Event/DAO/Event.php
@@ -1115,7 +1115,7 @@ msgstr "anonimno"
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 #: templates/CRM/Event/Form/Registration/Confirm.tpl
 msgid "under the name"
-msgstr ""
+msgstr "pod imenom"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
@@ -1703,7 +1703,7 @@ msgstr ""
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Total Paid"
-msgstr ""
+msgstr "Ukupno plaćeno"
 
 #: templates/CRM/Contribute/Page/PaymentInfo.tpl
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
@@ -1720,7 +1720,7 @@ msgstr "vidi uplate"
 #: templates/CRM/Contribute/Page/PcpUserDashboard.tpl
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "ongoing"
-msgstr ""
+msgstr "u toku"
 
 #: templates/CRM/Contribute/Page/Tab.hlp templates/CRM/Pledge/Page/Payment.hlp
 msgid "Adjust Pledge Payment Schedule"
@@ -1781,7 +1781,7 @@ msgstr "Molimo odštampajte ovu priznanicu zbog vaše evidencije."
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Each"
-msgstr ""
+msgstr "Svaki"
 
 #: xml/templates/message_templates/contribution_offline_receipt_text.tpl
 #: xml/templates/message_templates/contribution_online_receipt_text.tpl
