po: update po/sr_RS@latin/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/install.po
+++ b/po/sr_RS@latin/install.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-27 14:28+0000\n"
+"PO-Revision-Date: 2016-10-31 15:46+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -25,7 +25,7 @@ msgstr "Ups! Unesite ispravnu lokaciju vaše instalacije"
 msgid ""
 "Please untar (uncompress) your downloaded copy of CiviCRM in the "
 "<strong>%1</strong> directory below your Drupal root directory."
-msgstr ""
+msgstr "Raspakujte (dekompresujte) preuzetu kopiju CiviCRM-a u direktorijum <strong>%1</strong> ispod vašeg Drupal root direktorijuma."
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
@@ -126,7 +126,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Is the provided database name valid?"
-msgstr ""
+msgstr "Da li je ime za bazu podataka važeće?"
 
 #: install/index.php
 msgid ""
@@ -195,7 +195,7 @@ msgstr "PHP verzija %1"
 
 #: install/index.php
 msgid "File permissions"
-msgstr ""
+msgstr "Dozvole za fajlove"
 
 #: install/index.php
 msgid "Does the webserver know where files are stored?"
@@ -207,11 +207,11 @@ msgstr "Vebserver ne dozvoljava da se identifikuje lokacija na kojoj se fajlovi 
 
 #: install/index.php
 msgid "Does the CiviCRM path contain PATH_SEPARATOR?"
-msgstr ""
+msgstr "Da li CiviCRM putanja sadrži PATH_SEPARATOR?"
 
 #: install/index.php
 msgid "The path %1 contains PATH_SEPARATOR (the %2 character)."
-msgstr ""
+msgstr "Putanja %1 sadrži PATH_SEPARATOR (%2 karakter)."
 
 #: install/index.php
 msgid "Folder '%1' exists?"
@@ -223,7 +223,7 @@ msgstr "Ne postoji '%1' direktorijum."
 
 #: install/index.php
 msgid "Is the %1 folder writeable?"
-msgstr ""
+msgstr "Da li je moguće pisanje u direktorijumu %1 ?"
 
 #: install/index.php
 msgid "I can't tell what webserver you are running"
@@ -319,7 +319,7 @@ msgstr "Nemoguće je odrediti verziju MySQL-a. Proverite da li je verzija SQL-a 
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no."
-msgstr ""
+msgstr "Nemoguće je utvrditi da li MySQL ima InnoDB podršku. Pretpostavljamo da nema."
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
@@ -327,7 +327,7 @@ msgstr "MySQL server ima InnoDB podršku"
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
-msgstr ""
+msgstr "Nemoguće je utvrditi da li MySQL ima InnoDB podršku. Pretpostavljamo da nema"
 
 #: install/index.php
 msgid "Could not login to the database."
@@ -339,7 +339,7 @@ msgstr "Biranje baze podataka nije uspelo."
 
 #: install/index.php
 msgid "Could not create a temp table."
-msgstr ""
+msgstr "Nemoguće kreiranje privremene tabele."
 
 #: install/index.php
 msgid "Could not create a table in the database."
@@ -351,7 +351,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Could not connect to the database server."
-msgstr ""
+msgstr "Nemoguće povezivanje sa serverom sa bazom podataka."
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
@@ -367,7 +367,7 @@ msgstr ""
 
 #: install/index.php
 msgid "MySQL server auto_increment_increment is 1"
-msgstr ""
+msgstr "MySQL server auto_increment_increment je 1"
 
 #: install/index.php
 msgid "Could not get information about the thread_stack of the database."
@@ -375,7 +375,7 @@ msgstr ""
 
 #: install/index.php
 msgid "MySQL \"thread_stack\" is %1 kb"
-msgstr ""
+msgstr "MySQL \"thread_stack\" je %1 kb"
 
 #: install/index.php
 msgid "The database: '%1' does not exist."
@@ -507,7 +507,7 @@ msgid ""
 "in that language. The initial configuration of the basic data will also be "
 "set to that language (ex: individual prefixes, suffixes, activity types, "
 "etc.). <a href=\"%1\">Learn more about using CiviCRM in other languages.</a>"
-msgstr ""
+msgstr "CiviCRM je preveden na mnogo jezika, zahvaljujući svojoj zajednici prevodioca. Ukoliko izaberete drugi jezik, moguće je da će i instalacija biti dostupna na tom jeziku. Početna konfiguracija osnovnih podataka će takođe biti podešena na taj jezik (npr: individualni prefiksi, sufiksi, tipovi aktivnosti, itd.)  <a href=\"%1\">Nauči više o korišćenju CiviCRM-a na drugim jezicima.</a>"
 
 #: install/template.html
 msgid "Language of basic data:"
