--- a/po/sr_RS@latin/countries.po
+++ b/po/sr_RS@latin/countries.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-19 14:36+0000\n"
+"PO-Revision-Date: 2016-10-31 14:14+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -40,7 +40,7 @@ msgstr "Zapadna, Istočna, Centralna i Južna Afrika"
 
 msgctxt "country"
 msgid "unassigned"
-msgstr ""
+msgstr "nedodeljeno"
 
 msgctxt "country"
 msgid "Afghanistan"
