po: update po/sr_RS@latin/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/financial.po
+++ b/po/sr_RS@latin/financial.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-31 15:43+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,15 +23,15 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
-msgstr ""
+msgstr "Kreirao:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created Date:"
-msgstr ""
+msgstr "Kreirano datuma:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By:"
-msgstr ""
+msgstr "Poslednja izmena:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
@@ -98,7 +99,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Symbol"
-msgstr ""
+msgstr "Simbol"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Numeric Code"
@@ -110,7 +111,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Financial Transaction Id"
-msgstr ""
+msgstr "ID finansijske transakcije"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account ID"
@@ -169,7 +170,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
-msgstr ""
+msgstr "ID finansijske transakcije"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction From Account"
@@ -238,7 +239,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor is Active?"
-msgstr ""
+msgstr "Procesor je aktivan?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Is Default?"
@@ -246,7 +247,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Is Test Processor?"
-msgstr ""
+msgstr "je test procesor?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
@@ -351,7 +352,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "IP Address"
-msgstr ""
+msgstr "IP adresa"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Accounting Batch - %1"
@@ -379,11 +380,11 @@ msgstr ""
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "Task"
-msgstr ""
+msgstr "Zadatak"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "- actions -"
-msgstr ""
+msgstr "- akcije -"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
@@ -395,11 +396,11 @@ msgstr ""
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Assign"
-msgstr ""
+msgstr "Dodeli"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Assign Transaction"
-msgstr ""
+msgstr "Dodeli transakciju"
 
 #: CRM/Financial/Form/Export.php
 msgid "You cannot exported the batches which were exported earlier."
@@ -470,23 +471,23 @@ msgstr ""
 #: CRM/Financial/Form/FinancialBatch.php
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid "Number of Transactions"
-msgstr ""
+msgstr "Broj transakcija"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Please select a valid contact."
-msgstr ""
+msgstr "Izaberite važeći kontakt."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Number of Transactions should a positive number"
-msgstr ""
+msgstr "Broj transakcija treba da bude pozitivan"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Total Amount should be a positive number"
-msgstr ""
+msgstr "Ukupan iznos treba da bude pozitivan broj"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Created date cannot be greater than current date"
-msgstr ""
+msgstr "Datum kreiranja ne može biti veći od trenutnog datuma"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "This name already exists in database. Batch names must be unique."
@@ -502,11 +503,11 @@ msgstr ""
 
 #: CRM/Financial/Form/FinancialType.php
 msgid "Selected financial type has been deleted."
-msgstr ""
+msgstr "Odabrani tip finansija je obrisan."
 
 #: CRM/Financial/Form/FinancialType.php
 msgid "The financial type \"%1\" has been updated."
-msgstr ""
+msgstr "Tip finansija \"%1\" je ažuriran."
 
 #: CRM/Financial/Form/FinancialType.php
 msgid ""
@@ -589,7 +590,7 @@ msgstr ""
 
 #: CRM/Financial/Page/BatchTransaction.php
 msgid "Remove Transaction"
-msgstr ""
+msgstr "Ukloni transakciju"
 
 #: CRM/Financial/Page/BatchTransaction.php
 msgid "Accounting Batches"
@@ -639,7 +640,7 @@ msgstr ""
 #: templates/CRM/Financial/Form/BatchTransaction.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Pay Method"
-msgstr ""
+msgstr "Metod plaćanja"
 
 #: templates/CRM/Financial/Form/BatchTransaction.tpl
 msgid "Please select one or more contributions for this action."
@@ -710,7 +711,7 @@ msgstr ""
 
 #: templates/CRM/Financial/Form/FinancialBatch.tpl
 msgid "Opened Date"
-msgstr ""
+msgstr "Datum otvaranja"
 
 #: templates/CRM/Financial/Form/FinancialBatch.tpl
 msgid "Optional Constraints"
@@ -748,27 +749,27 @@ msgstr ""
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Confirm Changes"
-msgstr ""
+msgstr "Potvrdi izmene"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Are you sure you want to re-open:"
-msgstr ""
+msgstr "Da li ste sigurni da želite da ponovo otvorite:"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Are you sure you want to delete:"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete:"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Are you sure you want to close:"
-msgstr ""
+msgstr "Da li ste sigurni da želite da zatvorite:"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Export:"
-msgstr ""
+msgstr "Eksport:"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Format:"
-msgstr ""
+msgstr "Format:"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "mismatch."
@@ -777,7 +778,7 @@ msgstr ""
 #: templates/CRM/Financial/Form/Search.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Expected"
-msgstr ""
+msgstr "Očekivano"
 
 #: templates/CRM/Financial/Form/Search.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
@@ -786,11 +787,11 @@ msgstr ""
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Updated"
-msgstr ""
+msgstr "Ažurirano"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "An error occurred while processing your request."
-msgstr ""
+msgstr "Došlo je do greške pri procesovanju vašeg zahteva."
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "This record already has the status"
@@ -809,7 +810,7 @@ msgstr ""
 msgid ""
 "No response from the server. Check your internet connection and try "
 "reloading the page."
-msgstr ""
+msgstr "Nema odgovora od servera. Proverite vašu internet konekciju i pokušajte da ponovo učitate stranicu."
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Please select an action from the menu."
@@ -829,7 +830,7 @@ msgstr ""
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Updating"
-msgstr ""
+msgstr "Ažuriranje"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close this batch?"
@@ -937,7 +938,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Method:"
-msgstr ""
+msgstr "Metod plaćanja:"
 
 #: CRM/Financial/BAO/FinancialAccount.php
 msgid ""
@@ -986,11 +987,11 @@ msgstr ""
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "administer CiviCRM Financial Types"
-msgstr ""
+msgstr "Administracija CiviCRM tipova finansija"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "Administer access to Financial Types"
-msgstr ""
+msgstr "Administracija pristupa tipovima finansija"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid "This financial account cannot have '%1' relationship."
@@ -998,19 +999,19 @@ msgstr ""
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
-msgstr ""
+msgstr "ID valute"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Symbol"
-msgstr ""
+msgstr "Simbol valute"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Numeric Code"
-msgstr ""
+msgstr "Numerička šifra valute"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Full Currency Name"
-msgstr ""
+msgstr "Pun naziv valute"
 
 #: CRM/Financial/DAO/EntityFinancialAccount.php
 msgid "Entity Financial Account ID"
@@ -1055,7 +1056,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Is Payment?"
-msgstr ""
+msgstr "je uplata?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
