--- a/po/sr_RS@latin/grant.po
+++ b/po/sr_RS@latin/grant.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-31 12:17+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +19,7 @@ msgstr ""
 
 #: CRM/Grant/BAO/Grant.php
 msgid "Grant Note"
-msgstr ""
+msgstr "Grant beleške"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Money Transfer Date is NULL"
@@ -54,11 +55,11 @@ msgstr ""
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant report received?"
-msgstr ""
+msgstr "Primljen izveštaj o grantu?"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant ID"
-msgstr ""
+msgstr "Grant ID"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Application received date"
@@ -66,7 +67,7 @@ msgstr ""
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Decision date"
-msgstr ""
+msgstr "Datum odluke"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Money transfer date"
@@ -78,7 +79,7 @@ msgstr ""
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant report received"
-msgstr ""
+msgstr "Izvštaj o grantu primljen"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
@@ -86,7 +87,7 @@ msgstr ""
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Currency"
-msgstr ""
+msgstr "Valuta granta"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Rationale"
@@ -94,11 +95,11 @@ msgstr ""
 
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
-msgstr ""
+msgstr "Primljen izveštaj o grantu?"
 
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
-msgstr ""
+msgstr "Tražena suma<br />(orig. valuta)"
 
 #: CRM/Grant/Form/Grant.php
 msgid "Applicant"
@@ -106,11 +107,11 @@ msgstr ""
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
-msgstr ""
+msgstr "Nađi grantove"
 
 #: CRM/Grant/Form/Task/Delete.php CRM/Grant/Task.php
 msgid "Delete Grants"
-msgstr ""
+msgstr "obriši grantove"
 
 #: CRM/Grant/Form/Task/Delete.php
 msgid "%count grant deleted."
@@ -121,103 +122,103 @@ msgstr[2] ""
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
-msgstr ""
+msgstr "Štampa liste grantova"
 
 #: CRM/Grant/Form/Task/Update.php CRM/Grant/Task.php
 msgid "Update Grants"
-msgstr ""
+msgstr "Ažuriraj grantove"
 
 #: CRM/Grant/Form/Task/Update.php
 msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr ""
+msgstr "Ažuriranje grant(ov)a: %1 (Ukupno izabrano: %2)"
 
 #: CRM/Grant/Info.php
 msgid "access CiviGrant"
-msgstr ""
+msgstr "pristup CiviGrant-u"
 
 #: CRM/Grant/Info.php
 msgid "View all grants"
-msgstr ""
+msgstr "Pregledaj sve grantove"
 
 #: CRM/Grant/Info.php
 msgid "edit grants"
-msgstr ""
+msgstr "uredi grantove"
 
 #: CRM/Grant/Info.php
 msgid "Create and update grants"
-msgstr ""
+msgstr "Kreiraj i ažuriraj grantove"
 
 #: CRM/Grant/Info.php
 msgid "delete in CiviGrant"
-msgstr ""
+msgstr "obriši u CiviGrant-u"
 
 #: CRM/Grant/Info.php
 msgid "Delete grants"
-msgstr ""
+msgstr "Obriši grantove"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
-msgstr ""
+msgstr "grantovi"
 
 #: CRM/Grant/Selector/Search.php
 msgid "View Grant"
-msgstr ""
+msgstr "Pregledaj grant"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
-msgstr ""
+msgstr "Uredi grant"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Delete Grant"
-msgstr ""
+msgstr "obriši grant"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Requested"
-msgstr ""
+msgstr "Traženo"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Granted"
-msgstr ""
+msgstr "Grantovano"
 
 #: CRM/Grant/Task.php
 msgid "Export Grants"
-msgstr ""
+msgstr "Eksport grantova"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete ovaj grant?"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Amount requested for grant in original currency (if different)."
-msgstr ""
+msgstr "Tražena suma za grant u originalnoj valuti (ukoliko postoji razlika)."
 
 #: templates/CRM/Grant/Form/Grant.tpl templates/CRM/Grant/Form/Task/Update.tpl
 msgid "Date on which the grant decision was finalized."
-msgstr ""
+msgstr "Datum kada je donešena konačna odluka o grantu"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Date on which the grant money was transferred."
-msgstr ""
+msgstr "Datum transfera novca od granta."
 
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
-msgstr ""
+msgstr "(originalna valuta)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Status(s)"
-msgstr ""
+msgstr "Status(i) granta"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Type(s)"
-msgstr ""
+msgstr "Tip(ovi) granta"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
-msgstr ""
+msgstr "Datum nije podešen"
 
 #: templates/CRM/Grant/Form/Search/EmptyResults.tpl
 msgid "if you are searching by Contact name, check your spelling"
-msgstr ""
+msgstr "Ukoliko pretražujete po imenu kontakta proverite kako ste ispisali ime"
 
 #: templates/CRM/Grant/Form/Search.tpl
 msgid ""
@@ -227,18 +228,18 @@ msgstr ""
 
 #: templates/CRM/Grant/Form/Selector.tpl
 msgid "List more Grants"
-msgstr ""
+msgstr "Izlistaj više grantova"
 
 #: templates/CRM/Grant/Form/Task/Delete.tpl
 msgid ""
 "Are you sure you want to delete the selected Grants? This delete operation "
 "cannot be undone and will delete all transactions associated with these "
 "grants."
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete označene grantove? Ova operacija je nepovratna i ukloniće sve transakcije povezane sa ovim grantovima"
 
 #: templates/CRM/Grant/Form/Task/Print.tpl
 msgid "Amount Requested(orig. currency)"
-msgstr ""
+msgstr "Tražena suma (orig. valuta)"
 
 #: templates/CRM/Grant/Form/Task/Print.tpl
 msgid "Application Recieved"
@@ -246,7 +247,7 @@ msgstr ""
 
 #: templates/CRM/Grant/Form/Task/SearchTaskHookSample.tpl
 msgid "Decision Date"
-msgstr ""
+msgstr "Datum odluke"
 
 #: templates/CRM/Grant/Form/Task/Update.tpl
 msgid ""
@@ -256,7 +257,7 @@ msgstr ""
 
 #: templates/CRM/Grant/Form/Task/Update.tpl templates/CRM/Grant/Form/Task.tpl
 msgid "Number of selected grants: %1"
-msgstr ""
+msgstr "Broj odabranih grantova: %1"
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid ""
@@ -284,15 +285,15 @@ msgstr ""
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "Number of grants"
-msgstr ""
+msgstr "Broj grantova"
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "TOTAL"
-msgstr ""
+msgstr "UKUPNO"
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "You have no Grants registered in your database."
-msgstr ""
+msgstr "Nemate registrovanih grantova u bazi podataka."
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "Recent Grants"
@@ -304,16 +305,16 @@ msgstr ""
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr ""
+msgstr "Kliknite na <a %1>Dodaj grant</a> da snimite grant za ovaj kontakt."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
-msgstr ""
+msgstr "Nema snimljenih grantova za ovaj kontakt."
 
 #: CRM/Grant/Task.php
 msgid "Export grants"
-msgstr ""
+msgstr "Eksport grantova"
 
 #: CRM/Grant/Task.php
 msgid "Update grants"
-msgstr ""
+msgstr "Ažuriranje grantova"
